[package]
name = "blob-uuid"
version = "0.5.0"
authors = [ "Jovansonlee Cesar <ivanceras@gmail.com>" ]
license = "MIT"
description = "Converts Uuid to a url friendly 22 character string blob"
readme = "README.md"
repository = "https://github.com/ivanceras/blob-uuid"
documentation = "https://docs.rs/blob-uuid"
keywords = ["uuid", "blob", "base64"]
edition = "2018"

[dependencies]
base64 = "0.13.0"
uuid = { version = "1.0.0", features = ["v4"] }

[features]
default = []
wasm-bindgen = ["uuid/wasm-bindgen"]
stdweb = ["uuid/stdweb"]

[workspace]
members = [
    "cli"
]

