[package]
name = "blob-uuid-cli"
version = "0.4.0"
authors = [ "Jovansonlee Cesar <ivanceras@gmail.com>" ]
license = "MIT"
description = "Converts Uuid to a url friendly 22 character string blob"
readme = "../README.md"
repository = "https://github.com/ivanceras/blob-uuid"
documentation = "https://docs.rs/blob-uuid"
keywords = ["uuid", "blob", "base64"]
edition = "2018"

[[bin]]
name = "blob-uuid"
path = "src/main.rs"

[dependencies]
blob-uuid = "0.4.0"
structopt = "0.2.15"
